[metadata]
name = galaxy_crawler
version = attr: galaxy_crawler.version
author = Shoma Kokuryo
author_email = pudding@mail.poyo.info
description = Crawl and analyze roles on Ansible Galaxy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pddg/galaxy_crawler
license_file = LICENSE
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages =
    galaxy_crawler

[options.entry_points]
console_scripts =
    galaxy = galaxy_crawler.cli:main
