[metadata]
name = galaxy_crawler
version = attr: galaxy_crawler.version
author = Shoma Kokuryo
author_email = pudding@mail.poyo.info
description = Crawl and analyze roles on Ansible Galaxy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pddg/galaxy_crawler
license_file = LICENSE
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:
package_dir =
    =src

[options.package_data]
galaxy_crawler =
    store/alembic.ini
    store/alembic/*.*
    store/alembic/versions/*

[options.extras_require]
experiments =
    jupyterlab
    jupyterlab_code_formatter
    pytablewriter
    black
    seaborn
mysql =
    pymysql
postgres =
    psycopg2-binary
testing =
    pytest

[options.packages.find]
where = src
exclude =
    tests
    examples

[options.entry_points]
console_scripts =
    galaxy = galaxy_command.cli:main
